# reeco-python

./: .gitignore  README.md  generate-schema.py  pyproject.toml
src/reeco/: __init__.py  schema.py  validator.py
src/reeco/schema/: component.yml  container.yml  licences.yml  schema.yml
test/reeco/: validator.py
