[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "reeco"
readme = "README.md"
authors = [{name = "Enrico Daga", email = "enricodaga@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License","Programming Language :: Python :: 3"]
dynamic = ["version", "description"]

[project.urls]
Home = "http://github.com/reeco-framework/reeco-python"

